themes/hugo-split-theme/static/assets/css/podcast.css
/* Override the defaults for this theme */
.split-bio {
    font-family: "Filson Pro", Inter, Helvetica, Arial, sans-serif;
}

.podcast-episode .split-bio a {
    border-bottom: none;
}

.podcast-episode p,
.podcast-episode ul {
    font-size: 0.9em;
    text-align: justify-all;
}

.podcast-episode h2 {
    font-size: 0.9em;
    font-weight: bold;
}

.podcast-episode .split-intro h1 {
    font-size: 0.7em;
}
.podcast-episode h3 {
    font-size: 0.8em;
    font-family: "Filson Pro", sans-serif;
    text-transform: uppercase;
    font-weight: bold;
    color: #FFFFFF;
}

.podcast-episode h4 {
    font-size: 0.7em;
    font-weight: bold;
}

.episodelist {
    margin: 10px;
}
.baseurl a,
.episode-link a,
.episodelist a,
.disclaimer a {
    color: #b1bdb6;
}

.baseurl a:hover,
.episode-link a:hover,
.episodelist a:hover,
.disclaimer a:hover {
    color: #CCCCCC;
    text-decoration: none;
}

.episode-item {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    position: relative;
    padding-left: 15px;
}
.episode-item::before {
    content: '\2022';
    position: absolute;
    left: 0;
    top: 0;
}

.episodes li {
    padding: 10px;
    list-style: square;
}

.podcast-embed {
    display: flex;
    width: 100%;
    height: 100%;
    flex-direction: column;
    overflow: hidden;
    border: none;
}

.embed-inner {
    flex-grow: 1;
    border: none;
    margin: 0;
    padding: 0;
}

.split-credit {
    opacity: 0.4;
    font-size: 14px;
}

.baseurl,
.episode-link {
    font-size: 0.8em;
}
.episode-link a {
    cursor: pointer;
    /*text-decoration: #848d96 dashed;*/
}

.disclaimer {
    opacity: 0.8;
    font-size: 12px;
    line-height: 18px;
    font-weight: bold;
}

